# url-shortener

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Pipfile  README.md  azure-pipelines.yml  conftest.py  docker-compose.yml  pyproject.toml
app/: main.py
app/data/: __all_models.py  db_session.py  link.py  setup.py
app/db/: setup.py
app/services/: db.py  shortener.py
app/static/css/: main.css
app/templates/: 404.html  index.html
app/templates/shared/: layout.html
app/views/: home_view.py  redirect_view.py
test/unit/: test_db.py  test_shortener.py
tests/unit/: test_shortener.py
